Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19000

Android SDK can't be used if the licenses are not accepted.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.6.0
    • Qt Creator 4.4.0
    • Android Support
    • None

      Android SDK 26.x onwards the license has to be accepted explicitly before you can used the SDK. There is no warning in Qt creator of the pending licenses. 

       

      Workaround: One can accept the licenses using 'sdkmanager --licenses' command.

        For Gerrit Dashboard: QTCREATORBUG-19000
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            vikas Vikas Pachdha
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes